@@ -1,12 +1,12 @@
 package com.enonic.xp.lib.content;
 
-import org.apache.commons.lang.StringUtils;
-
 import com.enonic.xp.content.ContentId;
 import com.enonic.xp.content.ContentPath;
 import com.enonic.xp.content.ContentService;
 import com.enonic.xp.script.bean.BeanContext;
 import com.enonic.xp.script.bean.ScriptBean;
+
+import static com.google.common.base.Strings.nullToEmpty;
 
 public final class ContentExistsHandler
     implements ScriptBean
@@ -27,7 +27,7 @@ public final class ContentExistsHandler
 
     private boolean doExecute()
     {
-        if ( StringUtils.isBlank( this.key ) )
+        if ( nullToEmpty( this.key ).isBlank() )
         {
             throw new IllegalArgumentException( "'key' param is empty" );
         }
